<resources>
    <string name="app_name">Flasher</string>
    <string name="activity_title_card_decks">Card Decks</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="activity_title_flashcard_list">Flashcard List</string>
    <string name="title_create">Create</string>
    <string name="title_edit">Edit</string>
    <string name="title_flashcard">Flashcard</string>
    <string name="title_face_value">Face value</string>
    <string name="title_reverse_value">Reverse value</string>
    <string name="alert_title_confirm_delete">Confirm delete of card</string>
    <string name="DELETE">Delete</string>
    <string name="alert_title_error_deleting">Error while deleting card</string>
    <string name="alert_title_error_saving_card">Error while saving card</string>
    <string name="title_card_deck_name">Name for Card Deck</string>
    <string name="alert_title_error_saving_deck">Error while saving deck</string>

    <string name="file_to_import_prompt">Select file to import</string>
    <string name="folder_for_export_prompt">Select folder for export</string>
    <string name="deck_to_export_prompt">Select deck to export</string>
    <string name="destination_deck_prompt">Select deck to import to</string>
    <string name="create_new_deck">Create new deck</string>
    <string name="import_to_deck">Import to deck</string>
    <string name="select_folder">Select folder…</string>
    <string name="deck_to_export">Deck to export</string>
    <string name="file_prompt">Select file…</string>
    <string name="deck_prompt">Select deck…</string>
    <string name="overwrite_existing_cards">Overwrite existing cards</string>
    <string name="include_flaggings">Include flaggings</string>
    <string name="include_statistics">Include statistics</string>

    <string name="import_deck">Import deck</string>
    <string name="export_deck">Export deck</string>
    <string name="settings">Settings</string>
    <string name="flip_cards">Flip cards</string>
    <string name="sort_view">Sort view</string>
    <string name="start_quiz">Start quiz</string>
    <string name="search_for_card">Search for card</string>
    <string name="filter_cards">Filter cards</string>

    <string name="choose_file_prompt">Choose file</string>
    <string name="folders_title">Folders</string>
    <string name="files_title">Files</string>
    <string name="go_back">Go back</string>

	<string name="add_flashcard_button">Add flashcard</string>
    <string name="add_deck_button">Add deck</string>
	<string name="filter_prompt_title">Filter cards for partial word, word, or phrase</string>
    <string name="filter_button_text">Filter</string>
    <string name="clear_button_title">Clear</string>
    <string name="start_quiz_prompt">Start a Quiz</string>
    <string name="start_quiz_button">Start quiz</string>
    <string name="end_quiz_button">End Quiz</string>
    <string name="flashcard_quiz_title">Flashcard quiz</string>

    <string name="not_permitted_to_read_files">Not permitted to read files</string>
    <string name="backups_folder_name">Backups</string>
    <string name="documents_folder_name">Documents</string>
    <string name="download_folder_name">Download</string>
    <string name="temp_folder_name">Temp</string>
	<string name="no_cards_for_quiz_message">There are no cards found to use in this quiz!</string>
    <string name="toggle_flag_for_card">Toggle flag for card</string>
    <string name="peek_at_answer">Peek at answer</string>
    <string name="i_know_this">I know this</string>
    <string name="i_don_t_know_this">I don\'t know this</string>
    <string name="edit_card">Edit card</string>
    <string name="learning_language_prompt">Learning language</string>
    <string name="native_language_prompt">Native language</string>
    <string name="no_more_cards_in_quiz_prompt">No more cards in quiz</string>
    <string name="edit_card_prompt">Edit card</string>
    <string name="delete_card_prompt">Delete card</string>
	<string name="cannot_save_empty_card">Cannot save a card that is completely empty!</string>
    <string name="cannot_save_blank_learning_language">Cannot save a card with a blank learning language entry!</string>
    <string name="cannot_save_blank_native_language">Cannot save a card with a blank native language entry!</string>
	<string name="cannot_get_or_create_deck_for_import">Cannot get or create deck for import</string>
	<string name="number_zero">0</string>
	<string name="change_deck_name">Change deck name</string>
    <string name="articles_in_learning_language">Learning language articles (e.g. a, an, the)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_deck">Edit deck</string>
    <string name="cannot_rename_deck">Cannot rename deck because this name already exists on another deck</string>
    <string name="error_changing_deck_name">Error changing deck name</string>
    <string name="error_saving_articles">Error saving articles</string>
    <string name="error_encountered_updating_articles">Error encountered while updating list of articles for deck.</string>
	<string name="suppressing_duplicate">Suppressing duplicate</string>

</resources>