<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android">
	<item
			android:id="@+id/flip_cards"
			android:icon="@android:drawable/stat_notify_sync"
			android:title="@string/flip_cards"
			app:showAsAction="always" />
	<item
			android:id="@+id/sort_order"
			android:icon="@android:drawable/ic_menu_sort_alphabetically"
			android:title="@string/sort_view"
			app:showAsAction="always" />
	<item
			android:id="@+id/filter_card"
			android:icon="@android:drawable/ic_menu_search"
			android:title="@string/filter_cards"
			app:showAsAction="ifRoom" />
	<item
			android:id="@+id/start_quiz"
			android:icon="@android:drawable/checkbox_on_background"
			android:title="@string/start_quiz"
			app:showAsAction="ifRoom" />
</menu>