<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="260dp"
		android:weightSum="4"
		android:orientation="vertical">

	<androidx.cardview.widget.CardView
			android:id="@+id/deck_config"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_gravity="center_horizontal|center_vertical"
			android:layout_weight="4"
			android:background="@color/cardview_light_background"
			android:paddingLeft="5dp"
			android:paddingRight="5dp">

		<LinearLayout
				android:id="@+id/edit_top"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="top|start"
				android:orientation="vertical"
				android:weightSum="17">

			<Space
					android:layout_width="match_parent"
					android:layout_height="6dp"
					android:layout_weight="2" />

			<TextView
					android:id="@+id/deck_title"
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="2"
					android:text="@string/change_deck_name"
					android:textAlignment="textStart"
					android:textColor="@android:color/primary_text_light"
					android:textSize="14sp" />

			<EditText
					android:id="@+id/deck_name"
					android:layout_width="match_parent"
					android:layout_height="16sp"
					android:layout_weight="3"
					android:text=""
					android:textAlignment="textStart"
					android:textColor="@color/black"
					android:textSize="20sp" />

			<TextView
					android:id="@+id/deck_article_title"
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="2"
					android:text="@string/articles_in_learning_language"
					android:textAlignment="textStart"
					android:textColor="@android:color/primary_text_light"
					android:textSize="14sp" />

			<EditText
					android:id="@+id/list_of_articles"
					android:layout_width="match_parent"
					android:layout_height="20sp"
					android:layout_weight="4"
					android:text=""
					android:inputType="textMultiLine"
					android:textAlignment="textStart"
					android:textColor="@color/black"
					android:textSize="20sp" />

			<Space
					android:layout_width="match_parent"
					android:layout_height="10dp"
					android:layout_weight="2" />

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="18dp"
					android:layout_weight="2"
					android:orientation="horizontal"
					android:weightSum="2">

				<Button
						android:id="@+id/cancel_button_prompt"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/cancel" />

				<Button
						android:id="@+id/ok_button_prompt"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:text="@string/save" />

			</LinearLayout>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>