<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:weightSum="20"
		android:background="@color/cardview_dark_background"
		tools:context=".QuizActivity">

	<Space
			android:layout_weight="7"
			android:layout_height="0dp"
			android:layout_width="match_parent" />

	<androidx.cardview.widget.CardView
			android:id="@+id/flash_card"
			android:layout_width="match_parent"
			android:layout_height="250dp"
			android:layout_gravity="center_horizontal|center_vertical"
			android:layout_weight="4"
			android:background="@color/cardview_light_background"
			android:paddingLeft="5dp"
			android:paddingRight="5dp">

		<LinearLayout
			android:id="@+id/card_header"
			android:layout_width="match_parent"
			android:layout_height="23dp"
			android:layout_gravity="top"
			android:background="@android:color/transparent"
			android:orientation="horizontal"
			android:weightSum="10">

			<TextView
				android:id="@+id/card_language_prompt"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="7"
				android:textAlignment="textStart"
				android:textColor="@android:color/tertiary_text_light" />

			<TextView
				android:id="@+id/card_good_prompt"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="0"
				android:textAlignment="center"
				android:textColor="@android:color/holo_green_light"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/card_failed_prompt"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="0"
				android:textAlignment="center"
				android:textColor="@android:color/holo_red_dark"
				android:textStyle="bold" />

			<ImageButton
				android:id="@+id/card_flagging_button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:backgroundTintMode="screen"
				android:contentDescription="@string/toggle_flag_for_card"
				app:srcCompat="@drawable/clearflag" />


		</LinearLayout>

		<TextView
				android:id="@+id/card_front"
				android:layout_width="match_parent"
				android:layout_height="80sp"
				android:layout_gravity="center|center_horizontal"
				android:text=""
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="20sp" />

		<LinearLayout
				android:id="@+id/flash_actions"
				android:layout_width="match_parent"
				android:layout_height="120dp"
				android:layout_gravity="bottom"
				android:orientation="vertical"
				android:weightSum="6">

			<TextView
					android:id="@+id/card_reverse"
					android:layout_width="match_parent"
					android:layout_height="60sp"
					android:layout_gravity="center_horizontal|center_vertical"
					android:layout_weight="5"
					android:text=""
					android:textAlignment="center"
					android:textColor="@color/black"
					android:textSize="20sp" />

			<LinearLayout
					android:id="@+id/flash_buttons"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:weightSum="1.0">

				<ImageButton
					android:id="@+id/button_peek"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="0.166"
					android:contentDescription="@string/peek_at_answer"
					app:srcCompat="@drawable/peek" />

				<ImageButton
					android:id="@+id/button_good"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="0.33"
					android:backgroundTint="@android:color/holo_green_light"
					android:backgroundTintMode="multiply"
					android:contentDescription="@string/i_know_this"
					app:srcCompat="@drawable/correct" />

				<ImageButton
					android:id="@+id/button_fail"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="0.33"
					android:backgroundTint="@android:color/holo_red_dark"
					android:backgroundTintMode="multiply"
					android:contentDescription="@string/i_don_t_know_this"
					app:srcCompat="@drawable/incorrect" />

				<ImageButton
					android:id="@+id/button_edit"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="0.166"
					android:contentDescription="@string/edit_card"
					app:srcCompat="@drawable/edit" />

			</LinearLayout>
		</LinearLayout>
	</androidx.cardview.widget.CardView>

	<Space
			android:layout_weight="8"
			android:layout_height="0dp"
			android:layout_width="match_parent" />

	<Button
			android:id="@+id/end_quiz_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_weight="1"
			android:text="@string/end_quiz_button" />
</LinearLayout>