<?xml version="1.0" encoding="utf-8"?>
<!--  Single List Item Design -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/card_face"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/card_edit"
        android:layout_width="32dp"
        android:layout_height="fill_parent"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/edit_card_prompt"
        android:onClick="onClickButtonEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_flagged"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit" />

    <ImageButton
        android:id="@+id/card_flagged"
        android:layout_width="32dp"
        android:layout_height="fill_parent"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/toggle_flag_for_card"
        android:onClick="onClickCheckFlagged"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clearflag" />

    <ImageButton
        android:id="@+id/card_delete"
        android:layout_width="32dp"
        android:layout_height="fill_parent"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/delete_card_prompt"
        android:onClick="onClickButtonDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trash" />

</android.support.constraint.ConstraintLayout>



